--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ predict the binary coreference relationship between the event mention pair. They
         <div class="row align-items-lg-left">
           <div class="col-md-12 text-left">
             <h2 class="section-title mb-3">Video and code link</h2>
-            <iframe width="1120" height="630" src="https://www.youtube.com/embed/0zJLltYWtNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="1120" height="630" src="https://www.youtube.com/embed/iTEVcbhUscs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br><br>
             <a href="https://github.com/him-mah10/IRE-Major-Project" class="btn btn-primary mr-3 mb-3">Get code here</a>
           </div>
