--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ size</td>
 We will report results in terms of Accuracy(A), Precision (P), Recall (R) and F1 -score (F1) using
 commonly-used coreference scoring algorithms given by the CoNLL scorer to evaluate the
 event coreference resolution system.
-<br>Results to be updated.
+<br>We got the accuracy of around 55-58%(average of all the runs we tried). Our results varied with large margin for many cases.
           </div>
         </div>
       </div>
